kubernetes/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-server-service
  labels:
    service: fastapi-server-service
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: fastapi-todo-api
