kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
  labels:
    service: postgres-db-service
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    service: postgres-db
