kubernetes/react-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-client-service
  labels:
    service: react-client-service
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: react-todo-client
